# invoice_lock

./: MANIFEST.in  apps.txt  constraints.txt  pyproject.toml  setup.py
fixutres/: custom_field.json  role.json
invoice_lock/: customer_hooks.py  hooks.py  overdue.py  patches.txt  tasks.py  validation.py
invoice_lock/hooks/: sales_order.py
invoice_lock/public/js/: customer_lock_check.js
public/js/: customer_lock_check.js
