[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice_lock"
version = "0.0.1"
description = "Custom app to lock invoices"
authors = [
  { name="SurgiShop", email="gary.starr@surgishop.com" }
]
dependencies = [
    "frappe>=15",
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2"
]
readme = "README.md"
license = { text = "MIT" }

[tool.uv]
override-dependencies = [
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2"
]
